syntax = "proto3";

package messages.v1;

option go_package = "github.com/codex-k8s/project-example/proto/messages/v1;messagesv1";

import "google/protobuf/timestamp.proto";

service MessagesService {
  rpc CreateMessage(CreateMessageRequest) returns (CreateMessageResponse);
  rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse);
  rpc ListMessages(ListMessagesRequest) returns (ListMessagesResponse);
  rpc PurgeOldMessages(PurgeOldMessagesRequest) returns (PurgeOldMessagesResponse);
  rpc SubscribeEvents(SubscribeEventsRequest) returns (stream Event);
}

message Message {
  int64 id = 1;
  int64 user_id = 2;
  string text = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp deleted_at = 5; // nil => not deleted
}

message CreateMessageRequest {
  int64 user_id = 1;
  string text = 2;
}

message CreateMessageResponse {
  Message message = 1;
}

message DeleteMessageRequest {
  int64 user_id = 1;
  int64 message_id = 2;
}

message DeleteMessageResponse {
  int64 message_id = 1;
  google.protobuf.Timestamp deleted_at = 2;
}

message ListMessagesRequest {
  optional int32 limit = 1;
}

message ListMessagesResponse {
  repeated Message messages = 1;
}

message PurgeOldMessagesRequest {
  // Удалить (soft-delete) сообщения, созданные раньше указанного времени.
  google.protobuf.Timestamp older_than = 1;
}

message PurgeOldMessagesResponse {
  repeated DeleteMessageResponse deleted = 1;
}

message SubscribeEventsRequest {}

message Event {
  oneof payload {
    MessageCreated message_created = 1;
    MessageDeleted message_deleted = 2;
  }
}

message MessageCreated {
  Message message = 1;
}

message MessageDeleted {
  int64 message_id = 1;
  google.protobuf.Timestamp deleted_at = 2;
}
